Display alert when PPP constraint is enforced
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -13,6 +13,10 @@
     </div>
   </div>
   <div class="card-block">
+    <alert *ngFor="let alert of alerts"
+           [type]="alert.type"
+           [dismissible]="alert.dismissible"
+           (onClosed)="dismiss_alert(alert)">{{ alert.msg }}</alert>
     <div *ngIf="fetching>=0">
       <div class="progress">
         <div class="progress-bar" [style.width.%]="fetching_percent"></div>
