Add option to change graph height
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -10,6 +10,9 @@
       <div class="p-2" pTooltip="Linewidth">
         <dropdown [items]="linewidths" [(value)]="selected_linewidth" icon="pencil"></dropdown>
       </div>
+      <div class="p-2" pTooltip="Height">
+        <dropdown [items]="heights" [(value)]="selected_height" icon="arrows-v"></dropdown>
+      </div>
     </div>
   </div>
   <div class="card-block">
