--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -1,17 +1,23 @@
 <div class="card">
   <div class="card-header">
     <div class="d-flex justify-content-between">
-      <div class="p-2" *ngIf="show_set_selector">
-        <dropdown [items]="sets" [(value)]="selected_set"></dropdown>
+      <div class="d-flex justify-content-start">
+        <div class="p-2" *ngIf="show_set_selector">
+          <label>Set</label>
+          <dropdown [items]="sets" [(value)]="selected_set"></dropdown>
+        </div>
+        <div class="p-2" *ngIf="show_granularity_selector" pTooltip="Granularity">
+          <label>Granularity</label>
+          <dropdown [items]="granularities" [(value)]="selected_granularity"></dropdown>
+        </div>
       </div>
-      <div class="p-2" *ngIf="show_granularity_selector" pTooltip="Granularity">
-        <dropdown [items]="granularities" [(value)]="selected_granularity"></dropdown>
-      </div>
-      <div class="p-2" pTooltip="Linewidth">
-        <dropdown [items]="linewidths" [(value)]="selected_linewidth" icon="pencil"></dropdown>
-      </div>
-      <div class="p-2" pTooltip="Height">
-        <dropdown [items]="heights" [(value)]="selected_height" icon="arrows-v"></dropdown>
+      <div class="d-flex justify-content-end">
+        <div class="p-2" pTooltip="Linewidth">
+          <dropdown [items]="linewidths" [(value)]="selected_linewidth" icon="pencil"></dropdown>
+        </div>
+        <div class="p-2" pTooltip="Height">
+          <dropdown [items]="heights" [(value)]="selected_height" icon="arrows-v"></dropdown>
+        </div>
       </div>
     </div>
   </div>
